# tensor-rank-lower-bound

./: .bazelrc  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  run.py
certs/cyclic/: cert_cyclic_q02_n01.btp  cert_cyclic_q02_n01.pb.txt  cert_cyclic_q02_n02.btp  cert_cyclic_q02_n02.pb.txt  cert_cyclic_q02_n03.btp  cert_cyclic_q02_n03.pb.txt  (+90 more)
core/: BUILD  backtracking_proof.cc  backtracking_proof.h  backtracking_proof_test.cc  bit_vec.h  certificate.proto  constraints.h  constraints_test.cc  dynamic_matrix.cc  dynamic_matrix.h  dynamic_matrix_test.cc  gf.h  gf_test.cc  gf_vec.h  gf_vec_test.cc  math_utils.h  math_utils_test.cc  proto_io.h  proto_io_test.cc  rank_lower_bound_flatten.h  rank_lower_bound_forced_product.h  symmetry.h  tensor.h  tensor_isomorphism.h  tensor_isomorphism_test.cc  tensor_utils.h  tensor_utils_test.cc
paper/: .gitignore  main.tex  refs.bib
problems/: BUILD  chosen_problem.h
search/: BUILD  orbit_enumerator.h  orbit_enumerator_main.cc  orbit_enumerator_slow.h  orbit_enumerator_slow_test.cc  orbit_enumerator_test.cc  orbit_map.h  orbit_map_test.cc  rank_lower_bound_backtracking.h  rank_lower_bound_computer.h  rank_lower_bound_computer_test.cc  rank_lower_bound_degenerate.h  rank_lower_bound_main.cc  testdata_generator_main.cc
summary/: BUILD  cert_summary_main.cc  gen_prev_results.py  verify_prev_results.py
upper_bound/: BUILD  flip_scheme.cc  flip_scheme.h  rank_upper_bound.h  rank_upper_bound_main.cc  rank_upper_bound_test.cc
verifier/: BUILD  README.md  backtracking_verifier.h  verifier.h  verifier_main.cc  verifier_test.cc
(+521 files in other folders)
