module(name = "matrix_multiplication")

bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_cuda", version = "0.3.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")
bazel_dep(name = "ng-log", version = "0.8.0-rc1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "boost.algorithm", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.container", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.unordered", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.dynamic_bitset", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.iostreams", version = "1.90.0.bcr.2")
bazel_dep(name = "onetbb", version = "2022.3.0")
bazel_dep(name = "mimalloc", version = "2.2.4.bcr.2")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
